--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bootstrap": "^5.3.3",
     "ngx-bootstrap": "^12.0.0",
     "rxjs": "~7.8.0",
-    "tabulator-tables": "^6.0.1",
+    "tabulator-tables": "^6.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -30,6 +30,7 @@
     "@angular/cli": "^17.3.0",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/tabulator-tables": "^5.6.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
