--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "ngx-bootstrap": "^12.0.0",
     "rxjs": "~7.8.0",
     "tabulator-tables": "^6.1.0",
