--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "ngx-bootstrap": "^12.0.0",
+    "ngx-captcha": "^13.0.0",
     "rxjs": "~7.8.0",
     "tabulator-tables": "^6.1.0",
     "tslib": "^2.3.0",
