--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,7 @@
             ],
             "styles": [
               "./node_modules/tabulator-tables/dist/css/tabulator.min.css",
+              "./node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.scss"
             ],
             "scripts": [
@@ -102,7 +103,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/bootstrap-icons/font/bootstrap-icons.css"
               
             ],
             "scripts": [
