--- a/angular.json
+++ b/angular.json
@@ -39,11 +39,13 @@
             "styles": [
               "./node_modules/tabulator-tables/dist/css/tabulator.min.css",
               "./node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": [
               "./node_modules/xlsx/dist/xlsx.full.min.js",
-              "./node_modules/tabulator-tables/dist/js/tabulator.min.js"
+              "./node_modules/tabulator-tables/dist/js/tabulator.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
@@ -102,13 +104,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/bootstrap-icons/font/bootstrap-icons.css"
+              "src/styles.scss"
               
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           }
         }
